# fisheye_stereo

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: alt_main.yml  main.yml
cpp_project/: CMakeLists.txt  CamDesc.hpp  FisheyeDewarper.cpp  FisheyeDewarper.hpp  FisheyeDewrapper.cpp  FisheyeDewrapper.hpp  dewarper.cpp  dewrapper.cpp  out_camera_params.xml  run_w_chess.bat  run_w_stereo.bat  run_w_unity.bat
cpp_project/include/: CameraModel.h  FisheyeDewarper.hpp  StereoPair.hpp  SurroundSystem.hpp  models.h
cpp_project/src/: FisheyeDewarper.cpp  StereoPair.cpp  SurroundSystem.cpp  dewarper.cpp
cpp_project/src/models/: Atan.cpp  Mei.cpp  Pinhole.cpp  Scaramuzza.cpp
data/acircles/: circle_list.xml
data/chess/: chess_list.xml
data/cropped_chess/: crop_list[exp].xml  cropped_list.xml
data/stereo_img/: stereo_list.xml
data/unity_chess/: crop_list[exp].xml  unity_list.xml
matlab/: 0.05mcalibration.mat  01mCalibraton.mat  01mCalibraton540p.mat  01mMeiCalibraton.mat  DisparityPlayground.asv  DisparityPlayground.m  StereoPreview.asv  StereoPreview.m  System4StitchPTC.m  calibrationSession.mat  models.fig  stereoParamsDS.mat  stereoParamsKB.mat  stereoParamsMEI.mat  stereoParamsSCARA.mat  two_cams_calibrated.mat
thesis/NIR/: Makefile  flowchart.drawio  main.aux  main.fdb_latexmk  main.fls  main.tex  main.xdv  refs.bib
thesis/_Overview/: .papeeria  Makefile  main.tex  refs.bib  report.dvi  report.tex  report.toc  settings.tex
unity_library/: CMakeLists.txt  surroundView.h  unity_plugin.cpp
unity_project/: Assembly-CSharp.csproj  OCV_integration_test.sln  UpgradeLog.htm  unity_project.sln
unity_project/Assets/: Bowl.mat  Camera Texture.renderTexture  Chess Float.anim  Connector.cs  Copter.prefab  MultiThreading.cs  New Material 1.mat  New Material 2.mat  New Material 3.mat  New Material 4.mat  New Material 5.mat  New Material.mat  New Render Texture.renderTexture  RenderCubemap.cs  Sphere moving_R.controller  TextEditor.cs  body colour.mat  quadrocopterScript.cs  redball.anim  torgueScript.cs
unity_project/Plugin_build/: CMakeLists.txt  surroundView.h
(+54 files in other folders)
